# Thesis

./: .gitignore  README.md
code/forward_model/: pyproject.toml
code/forward_model/config/: default.yaml
code/forward_model/forward_model/: __init__.py  augment.py  cli.py  compose.py  data.py  evaluate.py  models.py  plots.py  prior.py  schema.py  synth.py
synthesis/: .latexmkrc  06_syringe_pump_hardware.md  2026-07-06_bending-characterization-miniaturized.md  2026-07-06_bending-characterization-miniaturized.tex  2026-07-06_coupled-bodytail-actuator-design.md  2026-07-06_coupled-bodytail-actuator-design.tex  2026-07-06_fabrication-molding-process.md  2026-07-06_fabrication-molding-process.tex  2026-07-06_firmware-python-arduino-gui-manual-control.md  2026-07-06_firmware-python-arduino-gui-manual-control.tex  2026-07-06_introduction_lizard.tex  2026-07-06_leg-actuator-suction-foot.md  2026-07-06_leg-actuator-suction-foot.tex  2026-07-06_lizard-robot-architecture.md  2026-07-06_lizard-robot-architecture.tex  2026-07-06_materials-and-bonding.md  2026-07-06_materials-and-bonding.tex  2026-07-06_pneumatic-coupling-connector.md  2026-07-06_pneumatic-coupling-connector.tex  2026-07-06_syringe_pump_hardware.tex  2026-07-06_vertical-ubend-loads-wall-transition.md  2026-07-06_vertical-ubend-loads-wall-transition.tex  2026-07-07_body_tail_analytical_model.md  2026-07-07_body_tail_analytical_model.tex  2026-07-07_reconstruction_results_section.tex  2026-07-07_reconstruction_results_synthesis.md  2026-07-11_gp-forward-model.md  2026-07-11_gp-forward-model.tex  (+21 more)
(+13 files in other folders)
