[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forward-model"
version = "0.1.0"
description = "Per-actuator GP/linear/MLP forward model Δz = f(z_t, u_t, dir_t) for the lizard robot -- synthetic-data-only until real recordings exist."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
    "pyarrow",
    "matplotlib",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
fm = "forward_model.cli:main"

[tool.setuptools.packages.find]
include = ["forward_model*"]
